# Rust_Web_Dev-Ch04_final

./: Cargo.toml  log4rs.yaml  requests.http
src/: main.rs  store.rs
src/routes/: answer.rs  question.rs
src/types/: pagination.rs  question.rs
