[package]
name = "ch_04-s4_1_2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
warp = "0.3.6"
watch = "0.2.3"
# We can omit the version number for local imports
handle-errors = { path = "handle-errors" }
